
=== Improvements

- https://github.com/eclipse-syson/syson/issues/298[#298] [syson] Add root Namespace to SysON models and libraries
- https://github.com/eclipse-syson/syson/issues/324[#324] [diagrams] Improve support for whitespaces, quotes, and special characters in direct edit

=== New features

- https://github.com/eclipse-syson/syson/issues/315[#315] [tests] Add Cypress test infrastructure and execute the Cypress tests as part of pull request checks 


== v2024.5.0

=== Breaking changes

- https://github.com/eclipse-syson/syson/issues/149[#149] [requirement-view] The `requirement-view` diagram has been introduced by error in the last release. This diagram is not defined in the SysMLv2 specification. It has been deleted in this release.

=== Dependency update

- Switch to Sirius Web 2024.5.0
- Switch to @ObeoNetwork/gantt-task-react 0.4.9
- Add dependency to org.apache.commons.commons-text 1.10.0

=== Bug fixes

- https://github.com/eclipse-syson/syson/issues/144[#144] [diagrams] Fix an issue where the "Add existing elements (recursive)" failed on PartUsage.
- https://github.com/eclipse-syson/syson/issues/167[#167] [interconnection-view] Add attributes compartment in children PartUsage nodes.
- https://github.com/eclipse-syson/syson/issues/174[#174] [details] Fix an issue where an error raised when setting a valid new value (with primitive type) in the Details view.
- https://github.com/eclipse-syson/syson/issues/192[#192] [import] Fix an issue where the /* and */ of a Comment's body were imported while importing a textual SysML file. 
- https://github.com/eclipse-syson/syson/issues/188[#188] [import] Fix an issue where some Memberships were contained in their parent through `ownedRelatedElement` instead of `ownedRelationship` reference.
- https://github.com/eclipse-syson/syson/issues/184[#184] [import] Fix an issue from element imported threw an alias
- https://github.com/eclipse-syson/syson/issues/249[#249] [import] Fix an issue to avoid Infinite Loop